# borisat

./: Makefile  README.md  pyproject.toml
borisat/: __init__.py
borisat/apis/: rd.py
borisat/models/rd/: unnested.py  vat.py
docs/: index.html
docs/apis/: index.html  rd.html
docs/models/rd/: unnested.html
html/borisat/models/: index.html
html/borisat/models/rd/: index.html  vat.html
tests/: test_rd.py
